# embedded_linux

./: calc.py  registrationSystem.py  users.json
bash/: lab1.sh  lab2.sh  lab3.sh  lab4.sh  lab5.sh  lab6.sh  lab7.sh  lab8.sh  lab9.sh  loop1.sh  ytdownloader.sh
cmake/intro/: CMakeLists.txt  Makefile  main.cpp
cmake/lab1/: CMakeLists.txt  defaultconfig.h.in  main.cpp
cmake/lab1/include/: sum.hpp
cmake/lab1/lib/: CMakeLists.txt  wifi.cpp  wifi.hpp
cmake/lab1/src/: sum.cpp
cpp/: a.out  asciiTable.cpp  decBin.cpp  helloworld.cpp  maxNum.cpp  multTable.cpp  sumDigits.cpp  vowel.cpp
cpp2/: a.out  delArrElement.cpp  evenOddArray.cpp  maxArr.cpp  mergeArrays.cpp  searchArr.cpp  sortlambda.cpp  square.cpp
cpp3/: a.out  accumArray.cpp  fillArray.cpp  interrupt.cpp  isDigit.cpp  isEven.cpp  random.cpp
projects/: gpioGUI.py  gpioInput.py  ledBlink5.py
pythonScripts/: calc.py  calender.py  circleArea.py  countInList.py  envValues.py  favRepo.py  registrationSystem.py  statisticsOS.py  timeTracking.py
pythonScripts2/: args.py  batteryNotify.py  copyBuffer.py  countLinesWords.py  hexBinaryConvet.py  hexfile.txt  listToStr.py  myfileBin.txt  publicIP.py  randomActivity.py  readEmail.py  readEmail2.py  smartScript.py
pythonScripts3/: calculatorGUI.py  caltk.py  clock.py  factorialApp.py  gauge.py
pythonScripts3/socket/: client.py  server.py
test/: RAII.cpp  a.out  addrOperator.cpp  array.cpp  cast.cpp  constexpr.cpp  copyCons.cpp  delegation.cpp  enum.cpp  function.cpp  functor.cpp  iterator.cpp  lambda.cpp  namespace.cpp  passByRef.cpp  pointer.cpp  static.cpp  stl.cpp  stl2.cpp  stlalgorthim.cpp  string.cpp  templete.cpp  threads.cpp  threadsMult.cpp  try.cpp  uniquePointer.cpp  vector.cpp  virtual.cpp
test/class/: a.out  class1.cpp  copyConstructor.cpp  operOverload.cpp
test/include/: includeImplement.cpp  includeInterface.hpp  includeMath.cpp
